--- a/Codes/Requirements.txt
+++ b/Codes/Requirements.txt
@@ -1,2 +1,2 @@
 # Python libraries:
-pip install tensorflow-gpu==1.14.0 scikit-image==0.17.2 scikit-learn scipy==1.1.0 imgaug IPython keras==2.2.4 opencv-python==3.4.2.17 jupyter numpy==1.16.4 h5py==2.10.0 ipyfilechooser
+pip install tensorflow-gpu==1.14.0 scikit-image==0.17.2 scikit-learn==0.24.1 scipy==1.1.0 imgaug==0.4.0 Ipython==7.20.0 keras==2.2.4 opencv-python==3.4.2.17 jupyter==1.0.0 numpy==1.16.4 h5py==2.10.0 ipyfilechooser==0.4.2
